<resources>
    <string name="app_name">LifeStyleApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="summary_title">"Summary"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="location">Location</string>
    <string name="sex">Sex</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmr">BMR</string>
    <string name="daily_calories">Daily Calories</string>
    <string name="maintain">Maintain Weight</string>
    <string name="loss">Loss Weight</string>
    <string name="gain">Gain Weight</string>
    <string name="bmi">BMI</string>
    <string name="placeholder">"-"</string>

    <string name="male">"Male"</string>
    <string name="female">"Female"</string>
    <string name="summary">Summary</string>
    <string name="set_goal">Set Goal</string>
    <string name="hikes">Hikes</string>
    <string name="weather">Weather</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_weather">Weather</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sedentary">Sedentary</string>
    <string name="active">Active</string>
    <string name="weight_goal">Weight Goal:</string>
    <string name="min_lbs">-5 lbs</string>
    <string name="max_lbs">5 lbs</string>
    <string name="middle_lbs">0 lbs</string>
    <string name="finish">Finish</string>
    <string name="current_weight">Current Weight</string>
    <string name="current_height">Current Height</string>
    <string name="temp">Temp</string>
    <string name="activity_level">Activity Level</string>
    <string name="salt_lake_city">Salt Lake City</string>
    <string name="feels_like">feels like</string>
    <string name="temp_min">temp min</string>
    <string name="temp_max">temp max</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height_in_inches">Height in inches</string>
    <string name="weight_in_lbs">Weight in lbs</string>
    <string name="register_now">Register Now</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="register">Register</string>
    <string name="profile_picture">profile picture</string>
    <string name="step_counter">Step Counter</string>
    <string name="tip_step_counter">Shake to start/stop the counter</string>
    <string name="start_value">0</string>
    <string name="reset">Reset</string>
</resources>